docs/api/qiskit/0.24/qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.mdx
---
title: RecursiveMinimumEigenOptimizationResult
description: API reference for qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult
---

<span id="qiskit-optimization-algorithms-recursiveminimumeigenoptimizationresult" />

# qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult

<Class id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/optimization/algorithms/recursive_minimum_eigen_optimizer.py" signature="RecursiveMinimumEigenOptimizationResult(x, fval, variables, status, replacements, history)">
  Recursive Eigen Optimizer Result.

  Constructs an instance of the result class.

  **Parameters**

  *   **x** (`Union`\[`List`\[`float`], `ndarray`]) – the optimal value found in the optimization.
  *   **fval** (`float`) – the optimal function value.
  *   **variables** (`List`\[`Variable`]) – the list of variables of the optimization problem.
  *   **status** (`OptimizationResultStatus`) – the termination status of the optimization algorithm.
  *   **replacements** (`Dict`\[`str`, `Tuple`\[`str`, `int`]]) – a dictionary of substituted variables. Key is a variable being substituted, value is a tuple of substituting variable and a weight, either 1 or -1.
  *   **history** (`Tuple`\[`List`\[`MinimumEigenOptimizationResult`], `OptimizationResult`]) – a tuple containing intermediate results. The first element is a list of `MinimumEigenOptimizerResult` obtained by invoking [`MinimumEigenOptimizer`](qiskit.optimization.algorithms.MinimumEigenOptimizer "qiskit.optimization.algorithms.MinimumEigenOptimizer") iteratively, the second element is an instance of `OptimizationResult` obtained at the last step via min\_num\_vars\_optimizer.

  ### \_\_init\_\_

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.__init__" name="__init__" signature="__init__(x, fval, variables, status, replacements, history)">
    Constructs an instance of the result class.

    **Parameters**

    *   **x** (`Union`\[`List`\[`float`], `ndarray`]) – the optimal value found in the optimization.
    *   **fval** (`float`) – the optimal function value.
    *   **variables** (`List`\[`Variable`]) – the list of variables of the optimization problem.
    *   **status** (`OptimizationResultStatus`) – the termination status of the optimization algorithm.
    *   **replacements** (`Dict`\[`str`, `Tuple`\[`str`, `int`]]) – a dictionary of substituted variables. Key is a variable being substituted, value is a tuple of substituting variable and a weight, either 1 or -1.
    *   **history** (`Tuple`\[`List`\[`MinimumEigenOptimizationResult`], `OptimizationResult`]) – a tuple containing intermediate results. The first element is a list of `MinimumEigenOptimizerResult` obtained by invoking [`MinimumEigenOptimizer`](qiskit.optimization.algorithms.MinimumEigenOptimizer "qiskit.optimization.algorithms.MinimumEigenOptimizer") iteratively, the second element is an instance of `OptimizationResult` obtained at the last step via min\_num\_vars\_optimizer.
  </Function>

  ## Methods

  |                                                                                                                                                                                                                 |                                             |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`__init__`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.__init__ "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.__init__")(x, fval, variables, status, …) | Constructs an instance of the result class. |

  ## Attributes

  |                                                                                                                                                                                                    |                                                                                         |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
  | [`fval`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.fval "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.fval")                               | Returns the optimal function value.                                                     |
  | [`history`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.history "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.history")                      | Returns intermediate results.                                                           |
  | [`raw_results`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.raw_results "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.raw_results")          | Return the original results object from the optimization algorithm.                     |
  | [`replacements`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.replacements "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.replacements")       | Returns a dictionary of substituted variables.                                          |
  | [`status`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.status "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.status")                         | Returns the termination status of the optimization algorithm.                           |
  | [`variable_names`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variable_names "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variable_names") | Returns the list of variable names of the optimization problem.                         |
  | [`variables`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variables "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variables")                | Returns the list of variables of the optimization problem.                              |
  | [`variables_dict`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variables_dict "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variables_dict") | Returns the optimal value as a dictionary of the variable name and corresponding value. |
  | [`x`](#qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.x "qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.x")                                        | Returns the optimal value found in the optimization or None in case of FAILURE.         |

  ### fval

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.fval" name="fval" signature="property fval">
    Returns the optimal function value.

    **Return type**

    `float`

    **Returns**

    The function value corresponding to the optimal value found in the optimization.
  </Function>

  ### history

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.history" name="history" signature="property history">
    Returns intermediate results. The first element is a list of `MinimumEigenOptimizerResult` obtained by invoking [`MinimumEigenOptimizer`](qiskit.optimization.algorithms.MinimumEigenOptimizer "qiskit.optimization.algorithms.MinimumEigenOptimizer") iteratively, the second element is an instance of `OptimizationResult` obtained at the last step via min\_num\_vars\_optimizer.

    **Return type**

    `Tuple`\[`List`\[`MinimumEigenOptimizationResult`], `OptimizationResult`]
  </Function>

  ### raw\_results

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.raw_results" name="raw_results" signature="property raw_results">
    Return the original results object from the optimization algorithm.

    Currently a dump for any leftovers.

    **Return type**

    `Any`

    **Returns**

    Additional result information of the optimization algorithm.
  </Function>

  ### replacements

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.replacements" name="replacements" signature="property replacements">
    Returns a dictionary of substituted variables. Key is a variable being substituted, value is a tuple of substituting variable and a weight, either 1 or -1.

    **Return type**

    `Dict`\[`str`, `Tuple`\[`str`, `int`]]
  </Function>

  ### status

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.status" name="status" signature="property status">
    Returns the termination status of the optimization algorithm.

    **Return type**

    `OptimizationResultStatus`

    **Returns**

    The termination status of the algorithm.
  </Function>

  ### variable\_names

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variable_names" name="variable_names" signature="property variable_names">
    Returns the list of variable names of the optimization problem.

    **Return type**

    `List`\[`str`]

    **Returns**

    The list of variable names of the optimization problem.
  </Function>

  ### variables

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variables" name="variables" signature="property variables">
    Returns the list of variables of the optimization problem.

    **Return type**

    `List`\[`Variable`]

    **Returns**

    The list of variables.
  </Function>

  ### variables\_dict

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.variables_dict" name="variables_dict" signature="property variables_dict">
    Returns the optimal value as a dictionary of the variable name and corresponding value.

    **Return type**

    `Dict`\[`str`, `float`]

    **Returns**

    The optimal value as a dictionary of the variable name and corresponding value.
  </Function>

  ### x

  <Function id="qiskit.optimization.algorithms.RecursiveMinimumEigenOptimizationResult.x" name="x" signature="property x">
    Returns the optimal value found in the optimization or None in case of FAILURE.

    **Return type**

    `Optional`\[`ndarray`]

    **Returns**

    The optimal value found in the optimization.
  </Function>
</Class>

